--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
 
 .loader {
   text-align: center;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 2rem;
   font-weight: 600;
   margin: 4.8rem;
