--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,7 @@ body {
   border-radius: 0.9rem;
   padding: 2rem 2.4rem;
   margin-bottom: 0.8rem;
+  text-align: center;
   font-weight: 600;
   display: flex;
   flex-direction: column;
